frontend/packages/volto-light-theme/src/theme/_header.scss
/* ... */
// Intranet Header

.header-wrapper.intranet-header {
  .header {
    .logo-nav-wrapper {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: space-between;

      @media only screen and (max-width: $narrow-container-width) {
        position: relative;
        flex-wrap: wrap;
        justify-content: space-between;
      }

      .mobile-nav.mobile.only {
        @media only screen and (max-width: $narrow-container-width) {
          display: flex;
          flex: 0 1 130px;
          flex-direction: row-reverse;
          order: 2;
        }

        .menu-drawer {
          @media only screen and (max-width: 961px) {
            top: 208px;

            .search-button {
              display: none;
            }
          }

          @media only screen and (max-width: $tablet-breakpoint) {
            top: 168px;
          }

          @media only screen and (max-width: 620px) {
            top: 225px;
          }
        }
      }
      .logo {
        @media only screen and (max-width: $narrow-container-width) {
          order: 0;
        }
        @media only screen and (max-width: $computer-breakpoint) {
          flex: 0 1 130px;
        }
      }
      .navigation {
        margin: 29px auto 0 auto;
      }
    }

    .navigation {
      display: flex;
      flex: 3.5 1 0;
      align-self: center;
      justify-content: center;
      margin-bottom: 40px;

      @media only screen and (max-width: $largest-mobile-screen) {
        display: none;
      }

      .desktop.menu {
        display: flex;
        justify-content: flex-end;

        a.item {
          padding: 0 5px;
          margin: 0 5px;
          color: $black;
          font-size: 18px;
          font-weight: 600;
          line-height: 24px;
          text-align: center;
        }
      }

      .mobile-menu {
        .mobile-menu-nav {
          > div {
            display: flex;
            flex-direction: column;
          }

          a.item {
            width: 100%;
            padding: 2rem 1.2rem 1.5rem 1.2rem;
            color: $black;
            font-size: 18px;

            &.active {
              border-bottom: 4px solid $black;
            }
          }
        }
      }
    }

    .complementary-logo {
      display: flex;
      max-width: 200px;
      flex: 1 1 auto;
      flex-direction: row-reverse;

      @media only screen and (max-width: $largest-mobile-screen) {
        display: none;
      }

      @media only screen and (max-width: $computer-breakpoint) {
        flex: 0 1 55px;
      }

      @media only screen and (max-width: $narrow-container-width) {
        order: 1;
      }
    }

    .search-wrapper {
      display: flex;
      max-width: 600px;
      flex: 1 1 0;
      align-self: center;
      justify-content: center;

      @media only screen and (max-width: $narrow-container-width) {
        flex: 1 1 auto;
        order: 3;
      }

      @media only screen and (max-width: $narrow-container-width) {
        width: 100%;
        margin-left: 0%;
      }

      .search {
        width: 100%;
        border-bottom: 2px solid $secondary-grey;
        .field.searchbox {
          padding-right: 1em;
          border: none;

          .ui.input input {
            width: 90%;

            &::placeholder {
              color: #808080;
              @include body-text();
            }
            @media only screen and (max-width: $narrow-container-width) {
              width: 100%;
            }
          }

          button {
            @media only screen and (max-width: $narrow-container-width) {
              padding-left: 9px;
            }
            &:hover {
              background-color: transparent;
              color: $black;
              cursor: pointer;
            }
          }
        }
      }
    }

    .tools-wrapper {
      justify-content: space-between;
      @media only screen and (max-width: $narrow-container-width) {
        flex-direction: row;
      }

      .tools {
        @media only screen and (max-width: $narrow-container-width) {
          display: none;
        }
      }
    }
  }
}

/* we have to align the search hide with desktop naviation hide.
And destktop navigation uses different breakpoint for different mode and it is coming
from volto core */
body.has-toolbar:not(.has-sidebar):not(.has-sidebar-collapsed) {
  .search-wrapper {
    @media only screen and (max-width: 1071px) {
      &.navigation-desktop {
        display: none;
      }
    }
  }
}

body.has-toolbar.has-sidebar {
  .search-wrapper {
    @media only screen and (max-width: 1447px) {
      &.navigation-desktop {
        display: none;
      }
    }
  }
}
/* ... */

